results/SpecGenBench/0-shot/log-IntSquare-2023_11_28_22_28_00.txt
public class IntSquare {

    //@ requires x >= 0;
    //@ ensures \result >= 0;
    public static int squareOf(int x) {
        if(x < 0)
            x = -x;
        int res = 0;
        //@ loop_invariant res == i * i;
        //@ loop_variant x - i;
        for(int i = 0; i < x; i++) {
            //@ loop_invariant res == i * i + j;
            //@ loop_variant x - j;
            for(int j = 0; j < x; j++) {
                res = res + 1;
            }
        }
        return res;
    }

}
/home/max/Documents/JMLGPT/tmp/IntSquare.java:10: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
        //@ loop_variant x - i;
            ^
/home/max/Documents/JMLGPT/tmp/IntSquare.java:13: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
            //@ loop_variant x - j;
                ^
2 errors

